# TradingAgents-CN

./: .env.docker  .env.example  .env.example.v2  .gitignore  Makefile  Multi_Market_Data_Implementation_Guide.md  README.md  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/core/: config.py  database_v2.py
app/services/: stock_service_v2.py
backend/: Dockerfile  README.md  alembic.ini  setup_database.sql
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: news_data.py  stocks.py
backend/app/services/: analysis_service.py  news_data_service.py  simple_analysis_service.py  vector_store_service.py
backend/app/services/queue/: keys.py
backend/app/worker/: akshare_sync_service.py
database/timescaledb/: init.sql  schema.sql
docker/: Dockerfile.frontend  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  docker-compose.yml
docs/: ACKNOWLEDGMENTS.md  CONFIGURATION_GUIDE.md  CONTRIBUTORS.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_V2_QUICK_START.md  DEVELOPMENT_STARTUP_GUIDE.md  FORMATTER_GUIDE.md  QUICK_START.md  README.md  TradingAgents-CN_Feature_Specification.md  Web_Features_Overview.md  acknowledgments.md  contributors.md
docs/blog/: 2025-10-25-302ai-integration-and-ui-improvements.md
docs/deployment/: PORTABLE_FAQ.md  QUICK_REFERENCE.md  v1.0.0-source-installation.md
docs/deployment/docker/: DOCKER_FILES_README.md  docker-compose.split.yml
docs/improvements/: LANGCHAIN_V1_INTEGRATION_GUIDE.md  LANGCHAIN_V1_MIGRATION_SUMMARY.md  LANGCHAIN_V1_UPGRADE_GUIDE.md  MARKET_ANALYST_V1_VS_V2_COMPARISON.md  langchain_modernization_example.py
docs/legal/: COMMERCIAL_LICENSE_TEMPLATE.md  COPYRIGHT.md  LICENSING.md
docs/license/: README.md
examples/: content_blocks_example.py  database_v2_example.py  middleware_integration_example.py
frontend/: .npmrc  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: setup.sh  verify_langchain_v1_compatibility.py
scripts/templates/: local.yaml.template
scripts/utils/: generate_env.py  generate_secrets.py
tests/: test_market_analyst_v2.py  test_v2_integration.py
tradingagents/agents/analysts/: china_market_analyst_v2.py  fundamentals_analyst_v2.py  market_analyst_v2.py  news_analyst_v2.py  social_media_analyst_v2.py
tradingagents/middleware/: __init__.py  base.py  citations_handler.py  content_blocks.py  conversation_summary.py  human_approval.py  reasoning_handler.py  risk_control.py
tradingagents/models/: analyst_outputs.py
