[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "1.0.0-preview"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 后端API框架和服务器
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",

    # 数据库和缓存
    # PostgreSQL/TimescaleDB (时序数据库)
    "psycopg[binary]>=3.1.0",  # PostgreSQL 异步驱动
    "asyncpg>=0.29.0",  # PostgreSQL 异步驱动（性能更好）
    "sqlalchemy>=2.0.0",  # ORM
    "alembic>=1.13.0",  # 数据库迁移工具

    # Redis (缓存)
    "redis>=6.2.0",

    # 向量数据库
    "qdrant-client>=1.7.0",  # Qdrant 向量数据库客户端

    # 认证和安全
    "PyJWT>=2.0.0",
    "bcrypt>=4.0.0",

    # 任务调度和异步
    "apscheduler>=3.10.0",
    "aiofiles>=0.8.0",

    # HTTP客户端和SSE
    "httpx>=0.24.0",
    "sse-starlette>=1.0.0",

    # 日志处理
    "concurrent-log-handler>=0.9.24",  # Windows 友好的日志轮转处理器

    # 数据源和金融数据
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "baostock>=0.8.8",
    "eodhd>=1.0.32",
    "finnhub-python>=2.4.23",
    "tushare>=1.4.21",
    "yfinance>=0.2.63",
    "stockstats>=0.6.5",

    # AI和LLM
    "chainlit>=2.5.5",
    "dashscope>=1.20.0",
    # LangChain 1.0 核心包
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-experimental>=1.0.0",
    "langchain-google-genai>=2.1.12",  # 修复 client_options 未定义错误
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-community>=1.0.0",  # 社区集成
    "langchain-postgres>=0.0.6",  # PostgreSQL/TimescaleDB 集成
    "langchain-qdrant>=0.1.0",  # Qdrant 向量存储集成
    "openai>=1.0.0,<2.0.0",

    # 数据处理和分析
    "pandas>=2.3.0",
    "plotly>=5.0.0",

    # 网络爬虫和解析
    "feedparser>=6.0.11",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "requests>=2.32.4",

    # 文档和格式化
    "markdown>=3.4.0",
    "pypandoc>=1.11",
    "python-docx>=0.8.11",  # Word文档处理，用于修复文本方向
    "pdfkit>=1.0.0",  # PDF生成工具，需要wkhtmltopdf

    # 工具和辅助
    "psutil>=6.1.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.0",  # YAML 配置文件解析
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "streamlit>=1.28.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
qianfan = ["qianfan>=0.4.20"]
# 向后兼容：如果需要使用旧版 LangChain API
classic = ["langchain-classic>=1.0.0"]
# 开发工具
dev = ["ruff>=0.8.0"]

[project.scripts]
tradingagents = "main:main"

[tool.setuptools.packages.find]
include = ["tradingagents*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "reports*", "results*", "eval_results*", "upstream_contribution*"]

# ==============================================================================
# Ruff - Modern Python linter and formatter
# ==============================================================================
[tool.ruff]
# 目标 Python 版本
target-version = "py310"

# 每行最大字符数
line-length = 100

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "node_modules",
    "frontend",
    "data",
    "logs",
    "reports",
    "results",
    "eval_results",
]

[tool.ruff.lint]
# 启用的规则集
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# N: pep8-naming
# W: pycodestyle warnings
# B: flake8-bugbear
# C4: flake8-comprehensions
# UP: pyupgrade
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

# 忽略的规则
ignore = [
    "E501",  # 行长度由 formatter 处理
    "B008",  # 允许在函数参数中使用函数调用（FastAPI 依赖注入需要）
    "B904",  # 允许在 except 块中不使用 raise from
]

# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

# 允许未使用的变量（以下划线开头）
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# 测试文件中允许使用 assert
"tests/**/*.py" = ["B011"]
# 脚本文件中允许使用 print
"scripts/**/*.py" = ["T201"]
# __init__.py 中允许未使用的导入
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# import 排序配置
known-first-party = ["tradingagents", "app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# 格式化配置
quote-style = "double"  # 使用双引号
indent-style = "space"  # 使用空格缩进
line-ending = "lf"  # 使用 LF 换行符
skip-magic-trailing-comma = false  # 保留尾随逗号
docstring-code-format = true  # 格式化 docstring 中的代码示例
